simple db running with template view

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/stylesheets/style.css" />
     </head>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="/games">Welcome!</a>
+        <a class="navbar-brand" href="/" >Welcome!</a>
     </nav>
     <body>
     {{{body}}}
