--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,11 +3,23 @@
         <title>Soccer Clubs Database</title>
         <link rel="stylesheet" href="/stylesheets/bootstrap.css" />
         <link rel="stylesheet" href="/stylesheets/style.css" />
+        <link rel='icon' href="images/soccerball.ico"/>
     </head>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="/" >Welcome!</a>
     </nav>
     <body>
+    {{#if success_msg}}
+        <div class = "alert alert-success">{{success_msg}}</div>
+    {{/if}}
+
+    {{#if error_msg}}
+        <div class = "alert alert-danger">{{error_msg}}</div>
+    {{/if}}
+    {{#if error}}
+        <div class = "alert alert-danger">{{error}}</div>
+    {{/if}}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     {{{body}}}
     </body>
 </html>
